# TicTacToe-server

./: .gitignore  CMakeLists.txt  Coordinate.proto  DisplayWriterService.proto  Dockerfile  GameSessionsManager.h  HttpServer.cpp  HttpServer.h  InputReaderService.proto  LobbyManager.h  PlayerInfo.h  SearchManager.h  api.txt  connection.h  handle_connection_job.h  http_methods.h  http_request.h  http_request_context.h  http_response.h  k8s-config.yaml  logger.h  main.cpp  request_matcher.h  thread_pool.h
grpc/: DisplayWorkerClient.h  InputReaderClient.h
io/: GrpcDelegatingReader.h  GrpcDelegatingWriter.h
